--- a/WebContent/0426ajax/test_ajax.html
+++ b/WebContent/0426ajax/test_ajax.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<script src="../js/jquery-3.3.1.js"></script>
-<script>
-	$(function() {
-		$('button').on('click',function(){
-			var xhttp = new XMLHttpRequest();
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+	<script src="../js/jquery-3.3.1.min.js"></script>
+	<script>
+		$(function() {
+			$('button').on('click',function(){
+				var xhttp = new XMLHttpRequest();
 			xhttp.onreadystatechange = function() {
 				if (this.readyState == 4 && this.status == 200) {
-// 					document.getElementById("demo").innerHTML = this.responseText;
 					$('#demo').html(this.responseText);
+					//document.getElementById("demo").innerHTML =
+						//this.responseText;
 				}
 			};
 			xhttp.open("GET", "ajax_info.jsp", true);
 			xhttp.send();
-		})
-	})
-</script>
+			})
+		});
+
+	</script>
 </head>
+
 <body>
+	<div id="demo">
+	</div>
 	<h1>The XMLHttpRequest Object</h1>
 	<button type="button">전송</button>
-	<div id="demo"></div>
-</body>
-</html>
 
+</body>
+
+</html>
